Add Playscii render

--- a/PrimitiveAdventure/PrimitiveAdventure.csproj
+++ b/PrimitiveAdventure/PrimitiveAdventure.csproj
@@ -32,6 +32,15 @@
     <None Update="Resources\Fonts\Cheepicus_12x12_cyr2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\items\sword.psci">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Palettes\c64_original.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\items\hands.psci">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
