--- a/PrimitiveAdventure/PrimitiveAdventure.csproj
+++ b/PrimitiveAdventure/PrimitiveAdventure.csproj
@@ -41,6 +41,9 @@
     <None Update="Resources\items\hands.psci">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Fonts\Cheepicus_12x12_special.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
