Add new font with icons

--- a/PrimitiveAdventure/PrimitiveAdventure.csproj
+++ b/PrimitiveAdventure/PrimitiveAdventure.csproj
@@ -44,6 +44,9 @@
     <None Update="Resources\Fonts\Cheepicus_12x12_special.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Fonts\Cheepicus12_special.font">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
